--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "illuminate/database": "^6.0",
         "intonate/tinker-zero": "^1.0",
         "laravel-zero/framework": "^6.0",
-        "werkspot/enum": "^2.1"
+        "werkspot/enum": "^2.1",
+        "ext-pcntl": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
